--- a/style.css
+++ b/style.css
@@ -270,6 +270,53 @@ font-size: 14px;
 line-height: 21px;
 }
 
+.rent-title {
+    width: 518px;
+    height: 51px;
+    font-weight: 400;
+    font-size: 34px;
+    text-align: center;
+    
+    margin-left: 350px;
+}
+.rent-order-details{
+    width: 348px;
+    height: 178px;
+    border: 1px solid #000000;
+}
+.rent-order-details{
+    align-items: center;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.rent-order-details img{
+    margin-left: 100px;
+    width: 38px;
+    height: 46px;
+    
+}
+.rent-span span{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18.5;
+    width: 223px;
+    height: 70px;
+    margin-top: 25px;
+}
+.rent-flex{
+    display: flex;
+}
+
+.rent-details{
+    margin-left: 40px;
+   
+}
+.rent-container{
+    margin-top: 40px;
+    margin-bottom: 80px;
+}
+
 
 @media (max-width: 768px){
     .social-media{
